# neve

./: .clang-tidy  .clangd  .gitignore  :w  CMakeLists.txt  LICENSE  README.md  \  run.sh
docs/: CNAME
include/: chunk.h  common.h  compiler.h  ctx.h  emit.h  err.h  ir.h  lexer.h  mem.h  obj.h  opt.h  pretty.h  render.h  tok.h  type.h  val.h  vm.h
neve/: CMakeLists.txt
neve/include/: compiler.h  debug.h  ir.h  lexer.h  render.h  tok.h  type.h  val.h  vm.h
neve/src/compiler/: ctx.c
neve/src/err/: render.c
neve/src/ir/: ir.c  pretty.c
neve/src/main/: main.c
src/: debug.c  main.c  tok.c  val.c  vm.c
src/compiler/: compiler.c  ctx.c  emit.c  opt.c
src/err/: err.c  render.c
src/ir/: ir.c  pretty.c  type.c
src/lexer/: lexer.c  tok.c
src/main/: main.c
src/mem/: mem.c
src/runtime/: obj.c  val.c
src/vm/: chunk.c  debug.c  vm.c
test/assigment/: associativity.neve  global.neve  grouping.neve  infix_operator.neve  local.neve  prefix_operator.neve  syntax.neve  to_self.neve  undefined.neve
test/expressions/: test.neve
